--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
 
 
 @media only screen
-and (min-width : 600px) {
+and (min-width : 700px) {
 .toplinks {
     width: 100%;
     text-align: center;
@@ -57,8 +57,8 @@ and (min-width : 600px) {
     font-family: 'Great Vibes', Georgia, serif;
     text-decoration: none;
     font-size: calc(20px + 1.7vw);
-    padding-left: 0.2em;
-    padding-right: 0.2em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
     margin-left: 0.1em;
     margin-right: 0.1em;
     color: white;
@@ -83,7 +83,7 @@ and (min-width : 600px) {
     width: 100%;
     text-align: center;
     font-family: 'Great Vibes', Georgia, serif;
-    font-size: calc(5px + 3vw);
+    font-size: calc(20px + 1.7vw);
 	color: white;
 }
 #topgap {
@@ -115,7 +115,7 @@ and (min-width : 600px) {
 }
 
 @media only screen
-and (max-width : 601px) {
+and (max-width : 701px) {
 .toplinks {
     width: 100%;
     text-align: center;
@@ -125,8 +125,8 @@ and (max-width : 601px) {
     font-family: 'Great Vibes', Georgia, serif;
     text-decoration: none;
     font-size: 180%;
-    padding-left: 0.2em;
-    padding-right: 0.2em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
     margin-left: 0.1em;
     margin-right: 0.1em;
     color: white;
@@ -148,7 +148,7 @@ and (max-width : 601px) {
     width: 100%;
     text-align: center;
     font-family: 'Great Vibes', Georgia, serif;
-    font-size: calc(5px + 3vw);
+    font-size: 180%;
 	color: white;
 }
 .title {
