--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 
 .roomdescription {
     margin-left: 1em;
-    font-family: 'Alegreya', Georgia, serif;
+    font-family: 'Alegreya';
     font-size: 120%;
     margin-bottom: 10%;
 }
@@ -40,7 +40,7 @@ body {
 .pagesubtitlediv {
     width: 100%;
     text-align: center;
-    font-family: 'Alegreya', Georgia, serif;
+    font-family: 'Alegreya';
     font-size: 150%;
     margin-top: 0.5em;
 }
@@ -54,7 +54,7 @@ and (min-width : 700px) {
     margin-top: calc(40px - 0.3vw);
 }
 .pagelink {
-    font-family: 'Great Vibes', Georgia, serif;
+    font-family: 'Great Vibes';
     text-decoration: none;
     font-size: calc(20px + 1.7vw);
     padding-left: 0.3em;
@@ -68,7 +68,7 @@ and (min-width : 700px) {
 .title {
     width: 100%;
     text-align: center;
-    font-family: 'Great Vibes', Georgia, serif;
+    font-family: 'Great Vibes';
     font-size: calc(5px + 7vw);
     position: relative;
     margin-top: 10vw;
@@ -76,13 +76,13 @@ and (min-width : 700px) {
 .pagetitlediv {
     width: 100%;
     text-align: center;
-    font-family: 'Great Vibes', Georgia, serif;
+    font-family: 'Great Vibes';
     font-size: calc(5px + 4vw);
 }
 .exceptionalDiv {
     width: 100%;
     text-align: center;
-    font-family: 'Great Vibes', Georgia, serif;
+    font-family: 'Great Vibes';
     font-size: calc(20px + 1.7vw);
 	color: white;
 }
@@ -122,7 +122,7 @@ and (max-width : 701px) {
     margin-top: 13%;
 }
 .pagelink {
-    font-family: 'Great Vibes', Georgia, serif;
+    font-family: 'Great Vibes';
     text-decoration: none;
     font-size: 180%;
     padding-left: 0.3em;
@@ -136,7 +136,7 @@ and (max-width : 701px) {
 .pagetitlediv {
     width: 100%;
     text-align: center;
-    font-family: 'Great Vibes', Georgia, serif;
+    font-family: 'Great Vibes';
     font-size: 170%;
 }
 .exceptionalSpan {
@@ -147,14 +147,14 @@ and (max-width : 701px) {
 .exceptionalDiv {
     width: 100%;
     text-align: center;
-    font-family: 'Great Vibes', Georgia, serif;
+    font-family: 'Great Vibes';
     font-size: 180%;
 	color: white;
 }
 .title {
     width: 100%;
     text-align: center;
-    font-family: 'Great Vibes', Georgia, serif;
+    font-family: 'Great Vibes';
     font-size: 300%;
     position: relative;
     margin-top: 90px;
@@ -197,7 +197,7 @@ and (max-width : 701px) {
 
 p {
     margin-right: 1em;
-    font-family: 'Alegreya', Georgia, serif;
+    font-family: 'Alegreya';
     font-size: 120%;
     margin-left: 1em;
 }
@@ -305,7 +305,7 @@ p {
     padding: 8px 12px;
     position: absolute;
     bottom: 10px;
-    font-family: 'Alegreya', Georgia, serif;
+    font-family: 'Alegreya';
 }
 
 /* The dots/bullets/indicators */
@@ -325,7 +325,7 @@ p {
 }
 
 .toplinkspan {
-    font-family: 'Alegreya', Georgia, serif;
+    font-family: 'Alegreya';
 }
 
 /* Fading animation */
@@ -373,19 +373,19 @@ p {
 }
 
 h3 {
-    font-family: 'Alegreya', Georgia, serif;
+    font-family: 'Alegreya';
     font-size: 120%;
     margin-left: 1rem;
 }
 
 h2 {
-    font-family: 'Alegreya', Georgia, serif;
+    font-family: 'Alegreya';
     font-size: 150%;
     margin-left: 1rem;
 }
 
 h1 {
-    font-family: 'Alegreya', Georgia, serif;
+    font-family: 'Alegreya';
     font-size: 160%;
     margin-left: 1rem;
 }
@@ -446,7 +446,7 @@ h1 {
 }
 
 .bottomdiv {
-    font-family: 'Alegreya', Georgia, serif;
+    font-family: 'Alegreya';
     font-size: 80%;
     text-align: center;
     margin-bottom: 3em;
@@ -465,7 +465,7 @@ h1 {
     float: right;
     color: black;
     background-color: rgba(255,255,255,0.6);
-    font-family: 'Alegreya', Georgia, serif;
+    font-family: 'Alegreya';
     padding-left: 1%;
     padding-right: 1%;
     font-size: calc(14px + 0.5vw);
