--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,16 @@ body {
     padding: 0;
 }
 
+.omuchadu {
+    display: flex;
+    justify-content: center;
+    font-size: 1.2rem;
+    color: #004466;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    font-family: monospace;
+}
+
 #winner {
     font-weight: bold;
 }
